[gd_scene load_steps=2 format=3 uid="uid://b3k3wdurud3bg"]

[ext_resource type="Script" uid="uid://km0a4h2brb3b" path="res://scripts/shop.gd" id="1_7lam4"]

[node name="Shop" type="Node2D"]
script = ExtResource("1_7lam4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 506.0
offset_top = 18.0
offset_right = 602.0
offset_bottom = 76.0

[node name="back" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Return to Hub"

[node name="equip" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Equip skills"

[node name="GemCount" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="purchasable" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/purchasable"]
layout_mode = 2
text = "Unlockable Skills"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Healing"
horizontal_alignment = 1

[node name="Heal" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="VBoxContainer/equip" to="." method="_on_equip_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Heal" to="." method="_on_heal_pressed"]
